cambios agregamos mas informacion

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes, este es mi sitio web, sigueme en redes sociales, el mejor
+        Hola estudiantes, este es mi sitio web, sigueme en redes sociales, el mejor y unico
     </p>
 </body>
 </html>
