Se agrego el token

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes, este es mi sitio web, sigueme en redes sociales, el mejor y unico
+        Token: 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
     </p>
 </body>
 </html>
